src/css/style.css
/* IMPORTS */
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* RESETS */
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

#root,
#__next {
  isolation: isolate;
}

/* VARIABLES */
:root {
  /* Size */
  --sz-min: 0;
  --sz-xxxs: 0.25rem;
  --sz-xxs: 0.5rem;
  --sz-xs: 0.75rem;
  --sz-s: 1rem;
  --sz-md: 1.25rem;
  --sz-lg: 1.75rem;
  --sz-xl: 2rem;
  --sz-xl: 2.25rem;
  --sz-xxl: 2.5rem;
  --sz-xxxl: 2.75rem;
  --sz-max: 3rem;

  /* Font sizes */
  --fs-min: 0.6rem;
  --fs-xs: 0.8rem;
  --fs-s: 1rem;
  --fs-md: 1.4rem;
  --fs-lg: 1.8rem;
  --fs-xl: 2.4rem;
  --fs-max: 3rem;

  /* Font Weights*/
  --fw-min: 100;
  --fw-slim: 300;
  --fw-regular: 400;
  --fw-mid: 500;
  --fw-bold: 700;
  --fw-max: 900;

  /* Color */
  --bg-main: #f8fafc;
  --bg-secondary: #d1d5db;
  --fg-main: #4169e1;
  --fg-secondary: #f8d081;
  --text-dark: #09090b;
  --text-dim: #4b5563;
  --text-light: #fafafa;
  --text-pale: #9ca3af;
  --clr-warning: #be123c;
}

/* GENERAL ELEMENTS */
body {
  height: 100vh;
  display: flex;
  flex-direction: column;
  font-family: 'Roboto', sans-serif;
  background-color: var(--bg-secondary);
}

h1 {
  font-size: var(--fs-xl);
}

h2 {
  font-size: var(--fs-l);
}

h3 {
  font-size: var(--fs-md);
}

h4 {
  font-size: var(--fs-s);
}

h5 {
  font-size: var(--fs-xs);
}

p {
  font-size: var(--fs-min);
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
  cursor: pointer;
}

button {
  border: none;
  border-radius: 10px;
  box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1);
  padding: var(--sz-xxxs) var(--sz-lg);
  font-size: var(--fs-xs);
  font-weight: var(--fw-bold);
  cursor: pointer;
}

button:hover {
  box-shadow: 0 8px 2px rgba(0, 0, 0, 0.1);
  transform: translateY(-2px);
  transition: ease-in-out 0.7;
}

button:active {
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
  transform: translateY(3px);
  transition: ease-in-out 0.4;
}

/* SEMANTIC ELEMENTS */
header {
  padding: var(--sz-min) var(--sz-lg);
  display: flex;
  align-items: center;
  gap: var(--sz-s);
  background-color: var(--fg-main);
  color: var(--text-light);
}

section {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
}

footer {
  padding: var(--sz-xxs) 0;
  background-color: var(--fg-secondary);
  text-align: center;
  color: var(--text-dark);
}

/* INDIVIDUAL ELEMENTS */
header > * {
  font-weight: var(--fw-slim);
}

header i {
  font-size: var(--fs-md);
}

section .btn.btn-add-book {
  margin: var(--sz-md);
}

.card {
  border-radius: 15px;
  padding: var(--sz-s) var(--sz-md);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  background-color: var(--bg-main);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  gap: var(--sz-xs);
}

.card p {
  font-size: var(--fs-s);
}

.book-container {
  padding: var(--sz-s);
  display: none;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: var(--sz-s);
}

.card.card-book {
  height: fit-content;
}

.card.card.card-book .button-container {
  margin-top: var(--sz-xxs);
  display: flex;
  justify-content: center;
  gap: var(--sz-md);
}

.card.card-book button {
  width: fit-content;
  padding: var(--sz-xxxs);
}

.card.card-book button.btn.btn-delete-book {
  background-color: var(--clr-warning);
  color: var(--text-light);
}

.card.card-form a {
  text-align: right;
  color: var(--text-dim);
}

.modal {
  display: none;
  justify-content: center;
  align-items: center;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 999;
  background-color: rgba(0, 0, 0, 0.2);
}

.modal .card.card-form a:hover {
  text-align: right;
  color: var(--text-dark);
}

.modal .card.card-form li {
  display: flex;
  gap: var(--sz-s);
  width: 100%;
}

.modal .card.card-form li input,
.modal .card.card-form li select {
  flex-grow: 1;
  border: none;
  border-radius: 5px;
  padding: var(--sz-min) var(--sz-s);
  background-color: var(--bg-secondary);
}

.modal .card.card-form li input:hover,
.card.card-form li input:focus {
  outline: 2px solid var(--fg-main);
}

.modal .card.card-form li input:focus {
  background-color: #fff;
}

.modal .card.card-form li:nth-child(7) {
  display: flex;
  justify-content: center;
}

.modal .card.card-form li .btn.btn-submit-book {
  margin: var(--sz-xs) 0;
  background-color: var(--fg-main);
  color: white;
}

footer a {
  color: var(--text-dark);
}

/* UTILITIES */
.open {
  width: 100%;
  height: 100%;
  display: flex;
}

.read {
  background-color: var(--fg-main);
  color: var(--text-light);
}

.unread {
  background-color: var(--fg-secondary);
  color: var(--text-dark);
}

/* MEDIA QUERIES */
@media screen and (min-width: 640px) {
  /* small mobile */
}

@media screen and (min-width: 768px) {
  /* large mobile */
}

@media screen and (min-width: 1024px) {
  h1 {
    font-size: var(--fs-max);
  }

  h2 {
    font-size: var(--fs-xl);
  }

  h3 {
    font-size: var(--fs-lg);
  }

  h4 {
    font-size: var(--fs-md);
  }

  h5 {
    font-size: var(--fs-s);
  }

  p {
    font-size: var(--fs-xs);
  }

  header i {
    font-size: var(--fs-lg);
  }
}

@media screen and (min-width: 1280px) {
  /* laptop */
}

@media screen and (min-width: 1536px) {
  /* desktop */
}

